major refactoring & code clearing